--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
                 </div>
                 <div class="col-5">
                     <h2>O que é bullying</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">"Bullying é uma palavra que se originou na língua inglesa.
+                         “Bully” significa “valentão”, e o sufixo “ing” representa uma ação contínua.
+                          A palavra bullying designa um quadro de agressões contínuas, repetitivas, com características de perseguição do agressor contra a vítima, não podendo caracterizar uma agressão isolada, resultante de uma briga
+                        As agressões podem ser de ordem verbal, física e psicológica, comumente acontecendo as três ao mesmo tempo.
+                         As vítimas são intimidadas, expostas e ridicularizadas. São chamadas por apelidos vexatórios e sofrem variados quadros de agressão com base em suas características físicas, seus hábitos, sua sexualidade e sua maneira de ser.
+                        As vítimas de bullying podem sofrer agressões de uma pessoa isolada ou de um grupo.
+                         Esse grupo pode atuar apenas como “espectadores inertes” da violência, que indiretamente contribuem para a continuidade da agressão.</p>
                 </div>
             </div>
         </section>
