--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                         As agressões podem ser de ordem verbal, física e psicológica, comumente acontecendo as três ao mesmo tempo.
                          As vítimas são intimidadas, expostas e ridicularizadas. São chamadas por apelidos vexatórios e sofrem variados quadros de agressão com base em suas características físicas, seus hábitos, sua sexualidade e sua maneira de ser.
                         As vítimas de bullying podem sofrer agressões de uma pessoa isolada ou de um grupo.
-                         Esse grupo pode atuar apenas como “espectadores inertes” da violência, que indiretamente contribuem para a continuidade da agressão.</p>
+                         Esse grupo pode atuar apenas como “espectadores inertes” da violência, que indiretamente contribuem para a continuidade da agressão.
+                        Fonte:https://brasilescola.uol.com.br/sociologia/bullying.htm</p>
                 </div>
             </div>
         </section>
