--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">o que é
                         </a>
                 </div>
-                <img src="img/bullying.webp" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/bullying.webp" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="menino apanhando" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -54,7 +54,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/representacao-grafica-de-um-menino-oprimido-em-alusao-ao-bullying.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/representacao-grafica-de-um-menino-oprimido-em-alusao-ao-bullying.jpg" title="menino triste" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que é bullying</h2>
@@ -76,11 +76,11 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/download (1).jpeg"
+                        <img src="img/download (1).jpeg" title="menino sofrendo bullying de varios"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/download.jpeg" class="img-fluid rounded-5"
+                        <img src="img/download.jpeg" class="img-fluid rounded-5" title="menina sofrendo bullying"
                             loading="lazy">
                     </div>
                 </div>
